--- a/Web.Statu/Views/Home/KIndex.cshtml
+++ b/Web.Statu/Views/Home/KIndex.cshtml
@@ -35,14 +35,16 @@
     int pocetRoku = (toY - fromY) + 1;
 
     HlidacStatu.Util.Graphics.Gradient gradIndex = new HlidacStatu.Util.Graphics.Gradient(
-            new HlidacStatu.Util.Graphics.RGB("00b300")
-            , new HlidacStatu.Util.Graphics.RGB("00b300")
-            , new HlidacStatu.Util.Graphics.RGB("FFA500")
-            , new HlidacStatu.Util.Graphics.RGB("FF0000")
-            , new HlidacStatu.Util.Graphics.RGB("FF0000")
-            , new HlidacStatu.Util.Graphics.RGB("FF0000")
-            , new HlidacStatu.Util.Graphics.RGB("FF0000")
-            , new HlidacStatu.Util.Graphics.RGB("FF0000")
+        new HlidacStatu.Util.Graphics.RGB("00b300") //10%
+        , new HlidacStatu.Util.Graphics.RGB("FFA500") //20%
+        , new HlidacStatu.Util.Graphics.RGB("FF0000") //30%
+        , new HlidacStatu.Util.Graphics.RGB("FF0000")
+        , new HlidacStatu.Util.Graphics.RGB("FF0000") //50%
+        , new HlidacStatu.Util.Graphics.RGB("FF0000")
+        , new HlidacStatu.Util.Graphics.RGB("FF0000")
+        , new HlidacStatu.Util.Graphics.RGB("FF0000")
+        , new HlidacStatu.Util.Graphics.RGB("FF0000") //90%
+        , new HlidacStatu.Util.Graphics.RGB("FF0000")
         );
 
 }
@@ -82,6 +84,65 @@
                     {
                         <td>
                             <b>@y</b>
+                        </td>
+                    }
+                </tr>
+
+
+                <tr>
+                    <td>
+                        Počet smluv
+                    </td>
+                    @for (int y = fromY; y <= toY; y++)
+                    {
+                        <td>
+                            @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).Smlouvy.Pocet)
+                        </td>
+                    }
+                </tr>
+                <tr>
+                    <td>
+                        Celková hodnota smluv
+                    </td>
+                    @for (int y = fromY; y <= toY; y++)
+                    {
+                        <td>
+                            @HlidacStatu.Util.RenderData.NicePrice(Model.ForYear(y).Smlouvy.CelkemCena, shortFormat: true)
+                        </td>
+                    }
+                </tr>
+
+
+                <tr>
+                    <td>
+                        Počet smluv se skrytou cenou
+                    </td>
+                    @for (int y = fromY; y <= toY; y++)
+                    {
+                        <td>
+                            @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).Statistika.NumBezCeny)
+                        </td>
+                    }
+                </tr>
+                <tr>
+                    <td>
+                        % smluv se skrytou cenou
+                    </td>
+                    @for (int y = fromY; y <= toY; y++)
+                    {
+                        <td>
+                            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).Statistika.PercentBezCeny)
+                        </td>
+                    }
+                </tr>
+                <tr>
+                    <td>
+                        % smluv se firmou navázanou na politiky
+                    </td>
+                    @for (int y = fromY; y <= toY; y++)
+                    {
+                        <td>
+                            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).Statistika.PercentSPolitiky)
                         </td>
                     }
                 </tr>
@@ -140,17 +201,6 @@
                         </td>
                     }
                 </tr>
-                <tr>
-                    <td>
-                        % smluv bez uvedené ceny
-                    </td>
-                    @for (int y = fromY; y <= toY; y++)
-                    {
-                        <td>
-                            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).Statistika.PercentBezCeny)
-                        </td>
-                    }
-                </tr>
 
                 <tr>
                     <td>
@@ -194,24 +244,28 @@
                     @for (int y = fromY; y <= toY; y++)
                     {
                         <td>
-                            <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Index).ToHex())">
-                                <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Index)
-                            </span>
-                            <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Normalized).ToHex())">
-                                <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Normalized)
-                            </span>
-                            <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Modified).ToHex())">
-                                <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Modified)
-                            </span>
-                            <span style="">
-                                <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Hall_Tideman_Index)
-                            </span>
-                            <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Kwoka_Dominance_Index).ToHex())">
-                                <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Kwoka_Dominance_Index)
-                            </span>
+                            @if (Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny != null)
+                            {
+                                <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Index).ToHex())">
+                                    <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Index)
+                                </span>
+                                <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Normalized).ToHex())">
+                                    <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Normalized)
+                                </span>
+                                <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Modified).ToHex())">
+                                    <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Herfindahl_Hirschman_Modified)
+                                </span>
+                                <span style="">
+                                    <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Hall_Tideman_Index)
+                                </span>
+                                <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Kwoka_Dominance_Index).ToHex())">
+                                    <br />@HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncentraceDodavateluBezUvedeneCeny.Kwoka_Dominance_Index)
+                                </span>
+                            }
                         </td>
                     }
                 </tr>
+
                 <tr>
                     <td>
                         Koncentrace dodavatelů podle oborů HH/HHM/KWO
@@ -225,23 +279,27 @@
                             @foreach (var cl in HlidacStatu.Lib.Data.Smlouva.SClassification.AllTypes.Where(m => m.MainType))
                             {
                                 <p>
-                                    <b>@(cl.SearchShortcut):</b>
-                                    @if (Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value) != null)
+                                    @if (Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value) == null)
                                     {
+                                        <b>@(cl.SearchShortcut):</b>
+                                    }
+                                    else
+                                    {
+                                        <b><a href="/HledatSmlouvy?q=@System.Net.WebUtility.UrlEncode(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Query)">@(cl.SearchShortcut)</a>:</b>
                                         <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Herfindahl_Hirschman_Index).ToHex())">
-                                            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Herfindahl_Hirschman_Index,0)
+                                            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Herfindahl_Hirschman_Index, 0)
                                         </span> @("/")
                                         <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Herfindahl_Hirschman_Modified).ToHex())">
-                                            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Herfindahl_Hirschman_Modified,0)
+                                            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Herfindahl_Hirschman_Modified, 0)
                                         </span> @("/")
                                         <span style="color:@(gradIndex.Color(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Kwoka_Dominance_Index).ToHex())">
-                                            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Kwoka_Dominance_Index,0)
+                                            @HlidacStatu.Util.RenderData.NicePercent(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value)?.Koncentrace?.Kwoka_Dominance_Index, 0)
                                         </span>
                                         <span>
                                             <br />
                                             @HlidacStatu.Util.RenderData.ShortNicePrice(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value).Koncentrace.CelkovaHodnotaSmluv),
                                             @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value).Koncentrace.PocetSmluv) smluv,
-                                            @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value).Koncentrace.PocetSmluv) bez ceny
+                                            @HlidacStatu.Util.RenderData.NiceNumber(Model.ForYear(y).KoncetraceDodavateluProObor(cl.Value).Koncentrace.PocetSmluvBezCeny) bez ceny
                                         </span>
                                     }
                                 </p>
